aggiornato contrller e spec openapi
